# OpenPersonaSimulation

./: .gitignore  BUILD_OUTLINE.md  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  RESPONSIBLE_AI_FAQ.md  SECURITY.md  SUPPORT.md  config.ini  generate_api_documentation.bat  pyproject.toml  reinstall_package_from_repo.bat  test_gpt41mini_with_cache.bat  uninstall_package.bat
.github/: copilot-instructions.md  project-copilot-instructions.md
.github/workflows/: all-tests.yml  core-tests.yml
autoresearch/: README.md  experiment.py  prepare.py  program.md
docs/: index.html
docs/guides/: ollama.md
examples/: config.ini
examples/agents/: Paulo_Salem.agent.json
landing/: package-lock.json  package.json  tailwind.config.ts
openpersona/: __init__.py  config.ini  control.py  profiling.py
openpersona/agent/: __init__.py  action_generator.py  grounding.py  memory.py  mental_faculty.py  persona.py
openpersona/clients/: __init__.py  azure_client.py  ollama_client.py  openai_client.py
openpersona/enrichment/: __init__.py  enricher.py  styler.py
openpersona/environment/: __init__.py  social_network.py  world.py
openpersona/examples/: __init__.py  agents.py
openpersona/experimentation/: __init__.py  in_place_experiment_runner.py  proposition.py  randomization.py  statistical_tests.py
openpersona/extraction/: __init__.py  artifact_exporter.py  normalizer.py  results_extractor.py  results_reducer.py  results_reporter.py
openpersona/factory/: __init__.py  base_factory.py  persona_factory.py
openpersona/steering/: __init__.py  intervention.py  narrative.py
openpersona/tools/: __init__.py  calendar_tool.py  doc_writer.py  sim_tool.py
openpersona/ui/: __init__.py  jupyter_widgets.py
openpersona/utils/: config.py  (+10 more)
publications/: README.md
tests/: README.md  conftest.py  testing_utils.py
(+941 files in other folders)
